--- a/login.html
+++ b/login.html
@@ -7,12 +7,12 @@
 	</head>
 	<body>
 	<section>
-		<div class="container martop45">
+		<div class="martop45">
 			<div class="row">
 			 	<div class="col-xs-12">
 			 		<div class="row">
 			 			<div class="col-xs-12  col-md-6 adminLogin">
-							<form class="form-horizontal">
+							<form name="loginForm" action="home.html" class="form-horizontal" onsubmit=login() method="post">
 								<h1>Admin Login</h1>				
 							  	<div class="input-group">
 								    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
@@ -34,7 +34,7 @@
 	</section>	  
 	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<!--   <script src="js/ds_script.js" type="text/javascript"></script> -->
+	 <script src="js/ds_script.js" type="text/javascript"></script>
 	  <link rel="stylesheet" href="css/style.css">
 	</body>
 </html>
